<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_97"
        android:src="@mipmap/logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_68">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg_selector"
            android:hint="@string/user_account_hint"
            android:textSize="@dimen/text_size_normal"
            android:padding="@dimen/dp_10"/>

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_10"
            android:src="@mipmap/icon_login_close"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg_selector"
            android:textSize="@dimen/text_size_normal"
            android:hint="@string/user_pwd_hint"
            android:padding="@dimen/dp_10"/>

        <ImageView
            android:id="@+id/iv_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/dp_10"
            android:src="@mipmap/icon_login_look"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/bg_blue_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_big"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/text_size_normal"/>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/forget_pwd"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/text_size_normal"/>
    </RelativeLayout>

</LinearLayout>